@@ -1,5 +1,10 @@
 Revision history for Perl extension HTML::Tagset
 
+2024-02-22  Phil Perry
+
+        Add 'ins' and 'del' to 'phrasal' tag list (was causing errors in
+          HTML::TreeBuilder). Fix POD spelling error.
+
 2008-02-29  Andy Lester
 
         * Release 3.20 -- Added <div> to the list of p_closure_barriers.
